<resources>
    <string name="app_name">OtraPracticaMas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pasar_A_Otro_Tab">Pasar a otro tablayout</string>
    <string name="precioEnvio">Costo de envio:</string>
    <string name="tex_Precio">Precio:</string>
    <string name="descrp">Descripcion:</string>
    <string name="nombre">Usuario:</string>
    <string name="comen">Comentario:</string>
    <string name="google_key">AIzaSyBbSQjB6yu9E2y_Mtr41uhXJ3Bj1mPY-a4</string>
    <string name="agregar">Agregar</string>
    <string name="todo">TODO</string>
    <string name="_3200">3200</string>
    <string name="direc">calle 12 nor 3-4</string>
    <string name="imageDes">imagen de restaurantes</string>
    <string name="mcdonalds">McDonalds</string>
    <string name="_4000">4000</string>
    <string name="hsjdchsjhcjs">hsjdchsjhcjs</string>
    <string name="_3_2">3.2</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="es_hora_de_pedir_algo">Es hora de pedir algo!!</string>
    <string name="view_details">view details</string>
    <string name="algo">algo</string>
</resources>
