<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="2dp"
    card_view:cardCornerRadius="4dp"
    android:id="@+id/vistaCard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativ">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:id="@+id/cardImageRes"
            android:focusableInTouchMode="false"
            android:src="@drawable/imagena"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mcdonalds"
            android:id="@+id/textCardNombreR"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/cardImageRes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/direc"
            android:id="@+id/textCardDireccionR"
            android:layout_below="@+id/textCardNombreR"
            android:layout_toEndOf="@+id/cardImageRes" />


        <RatingBar
            android:rating="3"
            android:stepSize="0.5"
            android:layout_marginStart="12dp"
            android:numStars="5"
            style="?attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarCard"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@+id/cardImageRes" />
        <Button
            android:id="@+id/detailidCard"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@id/ratingBarCard"
            android:padding="0dp"
            android:text="@string/view_details"
            android:textColor="@color/Orange"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>

