<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sombra"
    tools:context=".fragments.RestauranteFragment">


    <ImageView
        android:id="@+id/imagenR"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/restaurant"
        android:contentDescription="@string/todo"
        android:tint="#6F000000"
        android:elevation="8dp"
        />






    <TextView
        android:id="@+id/textPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imagenR"
        android:layout_marginStart="23dp"
        android:layout_marginTop="120dp"
        android:text="@string/bienvenido"
        android:textColor="@color/blanco"
        android:textSize="22sp"
        android:elevation="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPedido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/es_hora_de_pedir_algo"
        android:layout_below="@id/textPedido"
        android:layout_alignStart="@id/textPedido"
        android:textColor="@color/blanco"
        android:elevation="8dp"
        android:textSize="16sp"/>


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textPedido2"
        android:translationZ="12dp"
        android:background="@color/sombra"
        android:id="@+id/cardBusqueda"
        card_view:cardCornerRadius="4dp"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/location"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/Orange"
                android:src="@drawable/map"
                android:contentDescription="@string/todo" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/busqueda"
                android:layout_width="200dp"
                android:layout_height="50dp"
                />


            <ImageButton
                android:id="@+id/buscarItem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/blanco"
                android:src="@drawable/busqueda_ico"
                android:contentDescription="@string/todo"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>











    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleRes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardBusqueda"
        />










</RelativeLayout>
